test/js_comparison/querycompiler_step1_output.txt
node:internal/modules/cjs/loader:1423
  throw err;
  ^

Error: Cannot find module '../../knex-js'
Require stack:
- /Users/kartik/StudioProjects/knex/knex-dart/test/js_comparison/querycompiler_step1_structure.js
    at Module._resolveFilename (node:internal/modules/cjs/loader:1420:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1058:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1063:22)
    at Module._load (node:internal/modules/cjs/loader:1226:37)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:244:24)
    at Module.require (node:internal/modules/cjs/loader:1503:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (/Users/kartik/StudioProjects/knex/knex-dart/test/js_comparison/querycompiler_step1_structure.js:5:14)
    at Module._compile (node:internal/modules/cjs/loader:1760:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [
    '/Users/kartik/StudioProjects/knex/knex-dart/test/js_comparison/querycompiler_step1_structure.js'
  ]
}

Node.js v24.11.0
